--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>sqljdbc</groupId>
+            <artifactId></artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
